--- a/Compilateur_VHDL/Compilateur_VHDL/alu_test_summary.html
+++ b/Compilateur_VHDL/Compilateur_VHDL/alu_test_summary.html
@@ -2,7 +2,7 @@
 <BODY TEXT='#000000' BGCOLOR='#FFFFFF' LINK='#0000EE' VLINK='#551A8B' ALINK='#FF0000'>
 <TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'>
-<TD ALIGN=CENTER COLSPAN='4'><B>pipeline Project Status</B></TD></TR>
+<TD ALIGN=CENTER COLSPAN='4'><B>alu_test Project Status</B></TD></TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Project File:</B></TD>
 <TD>Compilateur_VHDL.xise</TD>
@@ -72,9 +72,9 @@
 &nbsp;<BR><TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'><TD ALIGN=CENTER COLSPAN='3'><B>Secondary Reports</B></TD><TD ALIGN=RIGHT WIDTH='10%'COLSPAN=1> <A HREF_DISABLED="?&ExpandedTable=SecondaryReports"><B>[-]</B></a></TD></TR>
 <TR BGCOLOR='#FFFF99'><TD><B>Report Name</B></TD><TD><B>Status</B></TD><TD COLSPAN='2'><B>Generated</B></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='/home/hhu/Compilateur/Compilateur_VHDL/Compilateur_VHDL/isim.log'>ISIM Simulator Log</A></TD><TD>Current</TD><TD COLSPAN='2'>jeu. mai 17 08:37:40 2018</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='/home/hhu/Compilateur/Compilateur_VHDL/Compilateur_VHDL/isim.log'>ISIM Simulator Log</A></TD><TD>Current</TD><TD COLSPAN='2'>mar. mai 29 11:10:40 2018</TD></TR>
 </TABLE>
 
 
-<br><center><b>Date Generated:</b> 05/17/2018 - 08:38:31</center>
+<br><center><b>Date Generated:</b> 05/29/2018 - 11:15:49</center>
 </BODY></HTML>
